--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:black">
-  <h1 style="text-align:center">WELCOME TO UTOPIA BRUH</h1>
+  <h1 style="text-align:center">WELCOME TO UTOPIA</h1>
 
    <div class="container">
       <div class="nav-wrapper">
