--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 </head>
 
 <body style="background-color: #101111;">
-<h1 style="text-align:center">WELCOME TO UTOPIA</h1>
+<h1 style="text-align:center">👁 WELCOME TO UTOPIA 👁</h1>
 
    <div class="container">
       <div class="nav-wrapper">
         <div class="left-side">
           <div class="nav-link-wrapper">
-              <a href="index.html">Home</a>
+              <a href="index.html">Home ☺</a>
             </div>
 
             <div class="nav-link-wrapper">
-              <a href="about.html">About</a>
+              <a href="about.html">About ☺</a>
             </div>
 
             <div class="nav-link-wrapper">
-              <a href="the strange.html">The strange</a>
+              <a href="the strange.html">The strange ☺</a>
             </div>
 
           </div>
