--- a/about.html
+++ b/about.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>About</title>
+  <meta charset="UTF-8">
+  <title>✿</title>
+  <link rel="stylesheet" href="main.css">
   </head>
-    <body>
-    <h2>Welcome to the end of the world</h2>
-    </html>
+  <body>
+    <div id="main">
+      <h1>Welcome to the end of the world</h1>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.trunk.min.js"></script>
+    <script>
+    VANTA.TRUNK({
+      el: "#main",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x38614d,
+      backgroundColor: 0x101111,
+      chaos: 4.00
+      })
+    </script>
+</body>
+</html>
