--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
   <title>✿</title>
   <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+
+<body style="background-color: #101111;">
     <div id="main">
       <h1>Welcome to the end of the world</h1>
     </div>
@@ -27,5 +28,7 @@
       chaos: 4.00
       })
     </script>
+
+    <p>Greetings from the beyond. Are you a secret teller? Story teller? Someone who is interested in realities and entities from a world beyond?</p>
 </body>
 </html>
